# yt-dlp-server

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/yt_dlp_server/: __init__.py  config.py
src/yt_dlp_server/db/: base.py  errors.py  models.py
src/yt_dlp_server/db/impl/: sqlite.py
src/yt_dlp_server/storage/: base.py
src/yt_dlp_server/storage/impl/: local.py
src/yt_dlp_server/workers/: task.py
src/yt_dlp_server/workers/queue/: base.py
src/yt_dlp_server/workers/queue/impl/: std.py  stl.py
tests/: __init__.py
tests/yt_dlp_server/: config_test.py
tests/yt_dlp_server/db/impl/: test_sqlite.py
tests/yt_dlp_server/storage/impl/: test_local.py
tests/yt_dlp_server/workers/: test_task.py
tests/yt_dlp_server/workers/queue/impl/: test_std.py
